# AI-detection-in-music-and-video

./: .env.example  .gitignore  CSpart.txt  README.md  project.txt  pyproject.toml  requirements.txt
.githooks/: pre-push
datasets/: README.md
datasets/test_media/video/real/: container.avi  container.mov
datasets/test_media/video/suspicious/: not_media.txt
desktop_app/: __init__.py  __main__.py  app.py  config.py  exporter.py  main_window.py  models.py  service.py  worker.py
desktop_app/application/: __init__.py  audit_log_service.py  audit_logger.py  coordinator.py  file_hash_service.py  file_loader.py  history_service.py  local_processing_service.py  ports.py  precheck_service.py  report_formatter.py  result_integrity_service.py  secure_file_intake.py
desktop_app/domain/: __init__.py  models.py
desktop_app/infrastructure/: __init__.py  analyzer_gateway.py  database.py  repositories.py
desktop_app/ui/: __init__.py  audit_log_dialog.py  history_dialog.py  main_window.py  report_preview_dialog.py  theme.py  worker.py
media_security/: __init__.py  cli.py  external_tools.py  model_integrity.py  service.py
media_security/core/: __init__.py  analysis.py  constants.py  metadata_forensics.py  models.py  scanner.py  splice_forensics.py
media_security/extractors/: audio.py  common.py  video.py
media_security/reporting/: __init__.py  human_readable.py
media_security/storage/: __init__.py  postgres_history.py  sqlite_config.py  sqlite_history.py
scripts/: auto_scan_inbox.ps1  check_external_tools.ps1  check_secrets.ps1  generate_metadata_examples.py  generate_test_media_fixtures.py  install_git_hooks.ps1  prune_external_datasets.ps1  run_metadata_scan.ps1  setup_env.ps1
security/: model_hash_manifest.json
src/media_security/: __init__.py  cli.py  models.py  scanner.py  signatures.py
src/media_security/extractors/: __init__.py  audio.py  video.py
tests/: test_analysis_service.py  test_audio_metadata.py  test_cli_json.py  test_exporter.py  test_external_tools.py  test_history.py  test_human_readable_report.py  test_main_window.py  test_metadata_forensics.py  test_model_integrity.py  test_scanner.py  test_secure_file_intake.py  test_signatures.py  test_splice_forensics.py  test_sqlite_security.py  test_video_metadata.py
video_detection/: __init__.py  mesonet_simple.py  video_analyzer.py
