[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-security-checker"
version = "0.1.0"
description = "Cybersecurity-focused metadata and integrity checks for media files."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AI Detection Team" }]
dependencies = ["psycopg[binary]>=3.2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
media-security-scan = "media_security.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["media_security*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
cache_dir = ".cache/pytest/cache"
addopts = "--basetemp=.cache/pytest/tmp"
